--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xlib.py",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "xlib package for python libraries",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
